// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Catalog Should match with snapshot when active page is MAIN_INDEX 1`] = `
<section
  className="catalog "
>
  <h2
    className="catalog__title visually-hidden"
  >
    Catalog
  </h2>
  <ul
    className="catalog__genres-list"
  >
    <li
      className="catalog__genres-item"
    >
      <a
        className="catalog__genres-link"
        href="#"
        onClick={[Function]}
      >
        All genres
      </a>
    </li>
    <li
      className="catalog__genres-item"
    >
      <a
        className="catalog__genres-link"
        href="#"
        onClick={[Function]}
      >
        Comedies
      </a>
    </li>
    <li
      className="catalog__genres-item"
    >
      <a
        className="catalog__genres-link"
        href="#"
        onClick={[Function]}
      >
        Crime
      </a>
    </li>
    <li
      className="catalog__genres-item"
    >
      <a
        className="catalog__genres-link"
        href="#"
        onClick={[Function]}
      >
        Documentary
      </a>
    </li>
    <li
      className="catalog__genres-item"
    >
      <a
        className="catalog__genres-link"
        href="#"
        onClick={[Function]}
      >
        Dramas
      </a>
    </li>
    <li
      className="catalog__genres-item"
    >
      <a
        className="catalog__genres-link"
        href="#"
        onClick={[Function]}
      >
        Horror
      </a>
    </li>
    <li
      className="catalog__genres-item"
    >
      <a
        className="catalog__genres-link"
        href="#"
        onClick={[Function]}
      >
        Kids & Family
      </a>
    </li>
    <li
      className="catalog__genres-item"
    >
      <a
        className="catalog__genres-link"
        href="#"
        onClick={[Function]}
      >
        Romance
      </a>
    </li>
    <li
      className="catalog__genres-item"
    >
      <a
        className="catalog__genres-link"
        href="#"
        onClick={[Function]}
      >
        Sci-Fi
      </a>
    </li>
    <li
      className="catalog__genres-item"
    >
      <a
        className="catalog__genres-link"
        href="#"
        onClick={[Function]}
      >
        Thrillers
      </a>
    </li>
  </ul>
  <div
    className="catalog__movies-list"
  >
    <article
      className="small-movie-card catalog__movies-card"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <div
          className=""
        >
          <video
            autoPlay={false}
            className="player__video"
            poster="img/bohemian-rhapsody.jpg"
            style={
              Object {
                "height": 175,
              }
            }
          />
        </div>
        <img
          alt="Bohemian Rhapsody"
          height="175"
          src="img/bohemian-rhapsody.jpg"
          width="280"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="movie-page.html"
        >
          Bohemian Rhapsody
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <div
          className=""
        >
          <video
            autoPlay={false}
            className="player__video"
            poster="img/aviator.jpg"
            style={
              Object {
                "height": 175,
              }
            }
          />
        </div>
        <img
          alt="Aviator"
          height="175"
          src="img/aviator.jpg"
          width="280"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="movie-page.html"
        >
          Aviator
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <div
          className=""
        >
          <video
            autoPlay={false}
            className="player__video"
            poster="img/revenant.jpg"
            style={
              Object {
                "height": 175,
              }
            }
          />
        </div>
        <img
          alt="Revenant"
          height="175"
          src="img/revenant.jpg"
          width="280"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="movie-page.html"
        >
          Revenant
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <div
          className=""
        >
          <video
            autoPlay={false}
            className="player__video"
            poster="img/johnny-english.jpg"
            style={
              Object {
                "height": 175,
              }
            }
          />
        </div>
        <img
          alt="Johnny English"
          height="175"
          src="img/johnny-english.jpg"
          width="280"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="movie-page.html"
        >
          Johnny English
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <div
          className=""
        >
          <video
            autoPlay={false}
            className="player__video"
            poster="img/shutter-island.jpg"
            style={
              Object {
                "height": 175,
              }
            }
          />
        </div>
        <img
          alt="Shutter Island"
          height="175"
          src="img/shutter-island.jpg"
          width="280"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="movie-page.html"
        >
          Shutter Island
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <div
          className=""
        >
          <video
            autoPlay={false}
            className="player__video"
            poster="img/pulp-fiction.jpg"
            style={
              Object {
                "height": 175,
              }
            }
          />
        </div>
        <img
          alt="Pulp Fiction"
          height="175"
          src="img/pulp-fiction.jpg"
          width="280"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="movie-page.html"
        >
          Pulp Fiction
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <div
          className=""
        >
          <video
            autoPlay={false}
            className="player__video"
            poster="img/seven-years-in-tibet.jpg"
            style={
              Object {
                "height": 175,
              }
            }
          />
        </div>
        <img
          alt="Seven Years in Tibet"
          height="175"
          src="img/seven-years-in-tibet.jpg"
          width="280"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="movie-page.html"
        >
          Seven Years in Tibet
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <div
          className=""
        >
          <video
            autoPlay={false}
            className="player__video"
            poster="img/snatch.jpg"
            style={
              Object {
                "height": 175,
              }
            }
          />
        </div>
        <img
          alt="Snatch"
          height="175"
          src="img/snatch.jpg"
          width="280"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="movie-page.html"
        >
          Snatch
        </a>
      </h3>
    </article>
  </div>
  <div
    className="catalog__more"
  >
    <button
      className="catalog__button"
      onClick={[Function]}
      type="button"
    >
      Show more
    </button>
  </div>
</section>
`;

exports[`Render Catalog Should match with snapshot when active page is MAIN_MOVIE_DETAILS 1`] = `
<section
  className="catalog catalog--like-this"
>
  <h2
    className="catalog__title "
  >
    More like this
  </h2>
  <div
    className="catalog__movies-list"
  >
    <article
      className="small-movie-card catalog__movies-card"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <div
          className=""
        >
          <video
            autoPlay={false}
            className="player__video"
            poster="img/bohemian-rhapsody.jpg"
            style={
              Object {
                "height": 175,
              }
            }
          />
        </div>
        <img
          alt="Bohemian Rhapsody"
          height="175"
          src="img/bohemian-rhapsody.jpg"
          width="280"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="movie-page.html"
        >
          Bohemian Rhapsody
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <div
          className=""
        >
          <video
            autoPlay={false}
            className="player__video"
            poster="img/aviator.jpg"
            style={
              Object {
                "height": 175,
              }
            }
          />
        </div>
        <img
          alt="Aviator"
          height="175"
          src="img/aviator.jpg"
          width="280"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="movie-page.html"
        >
          Aviator
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <div
          className=""
        >
          <video
            autoPlay={false}
            className="player__video"
            poster="img/revenant.jpg"
            style={
              Object {
                "height": 175,
              }
            }
          />
        </div>
        <img
          alt="Revenant"
          height="175"
          src="img/revenant.jpg"
          width="280"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="movie-page.html"
        >
          Revenant
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <div
          className=""
        >
          <video
            autoPlay={false}
            className="player__video"
            poster="img/johnny-english.jpg"
            style={
              Object {
                "height": 175,
              }
            }
          />
        </div>
        <img
          alt="Johnny English"
          height="175"
          src="img/johnny-english.jpg"
          width="280"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="movie-page.html"
        >
          Johnny English
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <div
          className=""
        >
          <video
            autoPlay={false}
            className="player__video"
            poster="img/shutter-island.jpg"
            style={
              Object {
                "height": 175,
              }
            }
          />
        </div>
        <img
          alt="Shutter Island"
          height="175"
          src="img/shutter-island.jpg"
          width="280"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="movie-page.html"
        >
          Shutter Island
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <div
          className=""
        >
          <video
            autoPlay={false}
            className="player__video"
            poster="img/pulp-fiction.jpg"
            style={
              Object {
                "height": 175,
              }
            }
          />
        </div>
        <img
          alt="Pulp Fiction"
          height="175"
          src="img/pulp-fiction.jpg"
          width="280"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="movie-page.html"
        >
          Pulp Fiction
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <div
          className=""
        >
          <video
            autoPlay={false}
            className="player__video"
            poster="img/seven-years-in-tibet.jpg"
            style={
              Object {
                "height": 175,
              }
            }
          />
        </div>
        <img
          alt="Seven Years in Tibet"
          height="175"
          src="img/seven-years-in-tibet.jpg"
          width="280"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="movie-page.html"
        >
          Seven Years in Tibet
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <div
          className=""
        >
          <video
            autoPlay={false}
            className="player__video"
            poster="img/snatch.jpg"
            style={
              Object {
                "height": 175,
              }
            }
          />
        </div>
        <img
          alt="Snatch"
          height="175"
          src="img/snatch.jpg"
          width="280"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="movie-page.html"
        >
          Snatch
        </a>
      </h3>
    </article>
  </div>
</section>
`;
